fixed dark mode bug + returned the donate prank

--- a/assets/stylesheets/about.css
+++ b/assets/stylesheets/about.css
@@ -11,7 +11,7 @@ body {
   font-family: 'Poppins';
 }
 
-.dark-mode {
+body.dark-mode {
   background-color: black;
   color: white;
 }
