--- a/assets/stylesheets/works-format.css
+++ b/assets/stylesheets/works-format.css
@@ -16,9 +16,6 @@ body {
   background-color: black;
   color: white;
 }
-.dark-mode .toggle i {
-  color: #fff;
-}
   
   /*===========================================THIS IS THE CONTENT FOR THE ENTIRE PAGE===========================================*/
 .row {
